2007-06-05  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #330175
	
	* em-folder-view.c: (emfv_message_reply):
	Added helper function html_contains_nonwhitespace which returns TRUE
	if selected html text contains at least one non-space character.

2007-06-16  Srinivasa Ragavan  <sragavan@novell.com>

	** Add support for the Magic Space Bar.

	* em-folder-browser.c: (html_scroll), (emfb_init),
	(emfb_list_key_press):
	* em-folder-tree.c: (emft_tree_user_event),
	(em_folder_tree_select_next_path):
	* em-folder-tree.h:

2007-06-15  Matthew Barnes  <mbarnes@redhat.com>

	* mail-send-recv.c:
	Use ellipsized GtkLabels instead of EClippedLabels (#447727).

2007-06-13  Sankar P  <psankar@novell.com>

	* em-folder-view.c:
	Fixes build break by including missing headers.
	See #442631

2007-06-12  Bastien Nocera  <hadess@hadess.net>

	* em-folder-view.c: (emfv_list_key_press):
	Add support for the XF86Reply and XF86MailForward multimedia
	keys (Closes: #442631)

2007-06-09  Matthew Barnes  <mbarnes@redhat.com>

	* Makefile.am:
	Fix a minor typo spotted by Gilles Dartiguelongue (#386503).

2007-06-05  Matthew Barnes  <mbarnes@redhat.com>

	* em-folder-view.c (emfv_on_url_cb):
	Duplicate a translated string since we free it later.

2007-06-05  Daniel Nylander <po@danielnylander.se>

	* default/Makefile.am: Added sv to SUBDIRS

2007-06-04  Matthew Barnes  <mbarnes@redhat.com>

	* mail-ops.h: Fix another implicit function declaration.

2007-05-28  Veerapuram Varadhan  <vvaradhan@novell.com>

	* em-folder-tree.c: (emft_popup_new_folder),
	(em_folder_tree_get_selected_folder_info): Do not fetch
	folder-info from backend - just use the data from the current
	folder tree.

2007-06-03  Srinivasa Ragavan  <sragavan@novell.com>

        ** Fix for version removal from Installed files from Gilles Dartiguelongue 

	* Makefile.am:

2007-06-03  Srinivasa Ragavan  <sragavan@novell.com>

	** Fix for bug #438461 from Gilles Dartiguelongue  

	* mail-config.glade:
