@@ -1,3 +1,10 @@
+2007-06-18  Srinivasa Ragavan  <sragavan@novell.com>
+
+	** Fix for bug #443659 from Vinod
+
+	* em-account-prefs.c: (account_able_clicked),
+	(account_able_toggled), (account_cursor_change):
+
 2007-06-05  Milan Crha  <mcrha@redhat.com>
 
 	** Fix for bug #330175
